--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7242200410&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9dbf274710&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7241f0ea90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7241f0ecd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9dbef819d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9dbef81bd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f72424ad4d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f72424ad710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9dbf521390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9dbf521590&gt;]</pre>
 </div>
 
 </div>
