--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe92c8f85d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe3aec84490&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe92c5b99d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe92c5b9bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe3ae678290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe3ae96dcd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe92cb58390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe92cb58590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe3aef46890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe3aef108d0&gt;]</pre>
 </div>
 
 </div>
