--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4a6c11a650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb2b58bf350&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4a6c0ec9d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4a6c0ecbd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb2b4914890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb2b4914a90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4a6c68b310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4a6c68b510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb2b4eb3250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb2b4eb3450&gt;]</pre>
 </div>
 
 </div>
