--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3658a62b50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5bcf685a90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3658459690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3658745c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5bcf648850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5bcf648a50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3658d3bf90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3658cef510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5bcfc22310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5bcfc22510&gt;]</pre>
 </div>
 
 </div>
