--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fbf2c02bfd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd8a2c34ad0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbf2bd37950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbf2bd37b50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd8a293aa10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd8a293ac10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fbf2c2d8310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fbf2c2d8510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd8a2ee03d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd8a2ee05d0&gt;]</pre>
 </div>
 
 </div>
