--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8c33bf8ed0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f38209cc750&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8c338e5a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8c338e5c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f38206aea50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f38206aec50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8c33e88410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8c33e88610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3820c4c490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3820c4c690&gt;]</pre>
 </div>
 
 </div>
