--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f49d7a800d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3bbc471690&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f49d7a58950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f49d7a58b50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3bbc158a10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3bbc158c10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f49d7ff9390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f49d7ff9590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3bbc6ff410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3bbc6ff610&gt;]</pre>
 </div>
 
 </div>
