--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3b2ab22250&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fad44511b50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3b2a7c8590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3b2a7fec10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fad44563ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fad44563cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3b2ad8ff50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3b2ada4610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fad44b08510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fad44b08710&gt;]</pre>
 </div>
 
 </div>
