--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc653036190&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa295e407d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc65300a9d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc65300abd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa295e10a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa295e10c50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc6535ae350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc6535ae550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa2963b6510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa2963b6710&gt;]</pre>
 </div>
 
 </div>
