--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faf8959aed0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f014c3ffbd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faf8927eb50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faf8927ed50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f014c0e5a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f014c0e5c90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faf89826510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faf89826710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f014c68a450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f014c68a650&gt;]</pre>
 </div>
 
 </div>
