--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8800afa090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faba8e99d50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8800ab7350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8800ac7e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7faba8b4f950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7faba8b4fb50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8801051c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f880106d790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7faba91273d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7faba91275d0&gt;]</pre>
 </div>
 
 </div>
