--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f826e0704d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8f48206690&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f826dd86ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f826dd86cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8f47f0ecd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8f47f0eed0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f826e32c510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f826e32c710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8f48500b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8f484b38d0&gt;]</pre>
 </div>
 
 </div>
