--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f96b4abbf10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f572d694110&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f96b4a87990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f96b4a87b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f572d6e48d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f572d6e4ad0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f96b502f390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f96b502f590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f572dc84310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f572dc84510&gt;]</pre>
 </div>
 
 </div>
