--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa616773510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcadc967850&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa6167dc910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa61647bb10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcadcf3d9d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcadcf3dbd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa616a6b910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa616a1e590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcadd4dc3d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcadd4dc5d0&gt;]</pre>
 </div>
 
 </div>
