--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcadc967850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcd79467f50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcadcf3d9d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcadcf3dbd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcd791409d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcd79140bd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcadd4dc3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcadd4dc5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fcd79719390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fcd79719590&gt;]</pre>
 </div>
 
 </div>
