--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcfa332f1d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0d6447d4d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcfa304f9d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcfa304fbd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0d644d2950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0d644d2b50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcfa35ed3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcfa35ed5d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0d64a75350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0d64a75550&gt;]</pre>
 </div>
 
 </div>
