--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8dd44a3910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6c5e03de50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8dd418b750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8dd418b950&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6c5e60ca10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6c5e60cc10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8dd4737110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8dd4737310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6c5ebb2490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6c5ebb2690&gt;]</pre>
 </div>
 
 </div>
