--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8ab03bbfd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f28e83fca10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8ab0385c10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8ab0385e10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f28e80f4850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f28e80f4a50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8ab092b510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8ab092b710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f28e86cf190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f28e86cf390&gt;]</pre>
 </div>
 
 </div>
