--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdf773dec10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9640ba8610&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdf7737b610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdf773abb10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f96408afad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f96405c1810&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fdf779adbd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fdf7794b510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9640e8b090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9640e56650&gt;]</pre>
 </div>
 
 </div>
