--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcefa1cd550&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff2a9017f10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcefa184b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcefa184d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff2a8cf6850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff2a8cedad0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcefa72b4d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcefa72b6d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff2a9326250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff2a92bb250&gt;]</pre>
 </div>
 
 </div>
