--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f077c33bd10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f567f51dd10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f077c049750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f077c049950&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f567f4eb850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f567f4eba50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f077c5ea1d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f077c5ea3d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f567fa91290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f567fa91490&gt;]</pre>
 </div>
 
 </div>
