--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9cea6295d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa9159dbc10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9cea5f89d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9cea5f8bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa9156e2bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa9156e2dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9ceab9d350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9ceab9d550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa915cdbb50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa915c89810&gt;]</pre>
 </div>
 
 </div>
