--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa9159dbc10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7a95dabed0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa9156e2bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa9156e2dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a95a94990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7a95a94b90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa915cdbb50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa915c89810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a96037390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7a96037590&gt;]</pre>
 </div>
 
 </div>
