--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f995b8aded0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f19334d8190&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f995b5b5b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f995b5b5d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f19331bf910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f19331bfb10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f995bb5c4d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f995bb5c6d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1933768310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1933768510&gt;]</pre>
 </div>
 
 </div>
