--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f19334d8190&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fce9ed3f1d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f19331bf910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f19331bfb10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fce9ea47a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fce9ea47c90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1933768310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1933768510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fce9efed490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fce9efed690&gt;]</pre>
 </div>
 
 </div>
