--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9951ef4750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5cdbed9b50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9951ec3b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9951ec3d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5cdbf299d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5cdbf29bd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9952467550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9952467750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5cdc4c8350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5cdc4c8550&gt;]</pre>
 </div>
 
 </div>
