--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe1b20a3dd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f66822a0b10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe1b1d8db90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe1b1d8dd90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f66822bb990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f66822bbb90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fe1b2333510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fe1b2333710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f66828943d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f66828945d0&gt;]</pre>
 </div>
 
 </div>
