--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f118f431d50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f13595cbb50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f118f3ff9d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f118f3c31d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1359b98bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1359b98dd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f118f99e3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f118f9c3f10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f135a141610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f135a141810&gt;]</pre>
 </div>
 
 </div>
