--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8e351d3290&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7cf7641910&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8e34bd77d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8e34ed5d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7cf76158d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7cf7615ad0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f8e354be390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f8e3547d750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7cf7bb5250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7cf7bb5450&gt;]</pre>
 </div>
 
 </div>
