--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f62e43bd8d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f883d908bd0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f62e440aa10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f62e440ac10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f883d610a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f883d610c90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f62e49ac490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f62e49ac690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f883dbb6510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f883dbb6710&gt;]</pre>
 </div>
 
 </div>
