--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f48cec22190&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f44aaa54610&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f48ce92da10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f48ce92dc10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f44aa74e890&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f44aa74ea90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f48ceed2350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f48ceed2550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f44aaceb250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f44aaceb450&gt;]</pre>
 </div>
 
 </div>
