--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0ba82ebc50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3eacd84f50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0ba7fbe910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0ba7fbeb10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3eacd2eb90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3eacd2ed90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f0ba8599250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f0ba8599450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3ead2ee4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3ead2ee6d0&gt;]</pre>
 </div>
 
 </div>
