--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd0fc5d2910&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0360afe310&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd0fc2dfa50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd0fc2dfc50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f03607d9090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0360809bd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd0fc880690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd0fc880890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0360e0e5d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0360dae510&gt;]</pre>
 </div>
 
 </div>
