--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9689e6f310&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4f1b315050&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9689b628d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9689b62ad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4f1b64b190&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4f1b2ebc10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f968a1032d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f968a1034d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4f1b8de6d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4f1b88a650&gt;]</pre>
 </div>
 
 </div>
