--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f77271ecb10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5383855750&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7726b7b990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7726b7bb90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f538355f7d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5383565a10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f772711b2d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f772711b4d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5383af9110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5383b05350&gt;]</pre>
 </div>
 
 </div>
