--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fda1b4ade50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa79128aa50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fda1b4868d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fda1b486ad0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa790f79a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa790f79c50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fda1ba70ed0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fda1ba263d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa79151c410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa79151c610&gt;]</pre>
 </div>
 
 </div>
