--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9204911b50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f61d981a310&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f920462f810&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f920462fa10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f61d953f450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f61d953f650&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f9204b971d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9204b973d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f61d9a9ed10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f61d9a9ef10&gt;]</pre>
 </div>
 
 </div>
