--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff6baa38cd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9cf37e2890&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff6ba700610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff6ba700810&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9cf34f6390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9cf34f6590&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff6bacbde50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff6bacc9050&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9cf3a53c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9cf3a53e10&gt;]</pre>
 </div>
 
 </div>
