--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7e38b70d50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0e9b245510&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7e38817310&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7e38817510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0e9af1c350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0e9af1c550&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7e38de0bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7e38de0dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0e9b4e5c10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0e9b4e5e10&gt;]</pre>
 </div>
 
 </div>
