--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1bcaae26d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f102ecb2550&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1bca7ef450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1bca7ef650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f102e9de410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f102e9de610&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1bcad4ed10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1bcad4ef10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f102f264d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f102f264f90&gt;]</pre>
 </div>
 
 </div>
