--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcfd28f9f10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc1dc93ee50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcfd25d8550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcfd25d8750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc1dc668d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc1dc5fc6d0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcfd2b75e10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcfd2b75fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc1dcbc6d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc1dcbc6f50&gt;]</pre>
 </div>
 
 </div>
