--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fac39753850&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f28b982dd90&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fac393fb1d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fac393fb3d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f28b953c450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f28b953c650&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fac399c6ad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fac399c6cd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f28b9dc8d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f28b9dc8f50&gt;]</pre>
 </div>
 
 </div>
